<resources>
    <string name="app_name">Azkar</string>
    <string name="main">الرَّئِيِسيَّةُ</string>
    <string name="azkarat">أذكارات</string>
    <string name="counter">السّبحةُ</string>
    <string name="praying_times"> مَوَاقِيتُ الصَّلَاَةِ </string>
    <string name="setting">Notifications - التَّنْبِيهَاتُ</string>
    <string name="textnoti"> إِعْدَادَاتُ التَّنْبِيهَاتِ النَّصِّيَّةَ</string>
    <string name="voicenoti"> إِعْدَادَاتُ التَّنْبِيهَاتِ الصَّوْتِيَّةَ</string>
    <string name="share">مُشَارَكَةُ</string>
    <string name="about"> عَنِ التَّطْبِيقِ</string>
    <string name="communicate">Communicate - التواصل</string>
    <string name="idea"> أَرَسِلَ رَأْيُكَ او أَفْكَارَكَ</string>
    <string name="closeapp">  إنهاء التَّطْبِيقَ َ</string>
    <string name="exit"> Exit - الْخُرُوجَُ</string>
    <string name="opne">Open</string>
    <string name="close">Close</string>
    <string name="morining">أذكار الصباح</string>
    <string name="night">أذكار المساء</string>
    <string name="mosque">أذكار المسجد</string>
    <string name="walkUp">أذكار الأستيقاظ</string>
    <string name="sleeping">أذكار النوم</string>
    <string name="pray">أذكار الصلاة</string>
    <string name="varities">أذكارات منوعة </string>
    <string name="benefit">  فَضُلَ الأذكار </string>
    <string name="below_fadl"> مَا أَجُمَلُ الْقُلَّبِ الَّذِي دَائِمًا يُفَكِّرُ بِرِضَا رَبِّهِ سُبْحَانهُ وَتُعَالَى ولسانهٌ لايفترٌ عَنْ ذِكْر اللَّه عُزَّ وَجَلُّ وَجوَارحُهُ تَعْمَلُ فِي خدمتِهِ وَطَاعَتِهِ. فَمِنْ أَجُمَلٍ مَا يَذْكُرَ الشَّخْصُ بَعْضُ المحفزات فِي جَمِيعَ الْجَوَانِبِ وَأَسْأَلُ اللَّه سُبْحَانهُ أَنْ يَجْعَلَنِي وَإِيَّاكُمْ مَفَاتِيحُ لِلْخَيْرِ مَغَالِيق لِلشَّرِّ و إِلَيكَ فُضُل الأذكار
 </string>
</resources>